JG-2001-12-05-0: Testsuite: Adapt qrsh test to use newer spawn function
                            open_remote_spawn_process.

EB-2001-12-05-0: Bugfix:    Master got pending tickets for jobs which
                            where already started.
                 Issue:     None (Fix of Enhancem.: EB-2001-12-04-0)

SD-2001-12-04-1: Enhancem.: SGEEE - Added support for qconf -clearusage to reset
                            sharetree usage back to zero.

JG-2001-12-04-0: Bugfix:    shepherd: async commands had no valid filehandles
                            for stdin/stdout/stderr. This could cause the 
                            async command, e.g. a terminate method, to fail.

EB-2001-12-04-0: Enhancem.: Memory optimization for array jobs

AH-2001-12-03-0: Bugfix:    Resolve hostname contained in 'act_qmaster' file 
                            before comparing it with me.qualified_hostname

JG-2001-12-03-0: Testsuite: parsing of qstat -ext output did not return
                            correct cpu value.

AA-2001-11-30-4: Feature:   Security changes:
                            - common/complex.[ch] -> sge_complex.[ch]
                              due to name conflict when compiling under
                              linux

JG-2001-11-30-1: Enhancem.: Event client mechanism:
                            - any user may start an event client from an admin
                              or submit host
                            - changing event client parameters (subscription or
                              event delivery interval) does not take immediate
                              effect, but a number of changes can be made 
                              effective by a single qmaster communication.

JG-2001-11-30-0: Cleanup:   made a number of function parameters const

CR-2001-11-30-1: Bugfix:    qrsh error with empty job parameters
                 Issue:     #110
                 Bugtraq:   #4533448

AA-2001-11-30-4: Feature:   Security changes: